--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,6 @@ hamburger
 #home {
   padding: 0;
   background-color: #29323c;
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
   position: relative;
   z-index: 1;
   overflow: hidden;
@@ -638,9 +637,11 @@ hamburger
 }
 @media (min-width: 1024px) {
   #home::after {
+    width: 50%;
     background-position: left;
     background-size: contain;
     background-attachment: fixed;
+    opacity: 1;
     background-image: url(../img/shakexblue-min.jpg);
   }
 }
@@ -657,20 +658,21 @@ hamburger
 #home .hero .hero-bg {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
   mix-blend-mode: overlay;
 }
-@media (min-width: 820px) {
+@media (min-width: 1024px) {
   #home .hero .hero-bg {
-    display: none;
+    width: 100%;
   }
 }
 #home .hero .hero-bg img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 #home .hero #hero-h1 {
   background: transparent;
@@ -680,7 +682,7 @@ hamburger
   top: 25vh;
   left: 5vw;
 }
-@media (min-width: 1024px) {
+@media (min-width: 600px) {
   #home .hero #hero-h1 {
     padding: 0.5em;
     left: 50%;
@@ -688,7 +690,7 @@ hamburger
   }
 }
 #home .hero #hero-h1 h2 {
-  margin-bottom: 0.2em;
+  margin-bottom: 0.5rem;
   display: block;
   width: fit-content;
   color: #eee;
@@ -704,13 +706,6 @@ hamburger
   color: #f4f4f4;
   text-align: left;
   font-size: 1.5em;
-  opacity: 0;
-  line-height: 1.3;
-  animation: hero-span 5s ease-in-out;
-  animation-fill-mode: forwards;
-  animation-delay: calc(1s + .5s * var(--s));
-  transition: 1s;
-  transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
 }
 @keyframes hero-span {
@@ -731,7 +726,7 @@ hamburger
   animation-delay: 4s;
   animation-fill-mode: forwards;
   margin: 0.5em 0;
-  color: #ead2a1;
+  color: #ddd;
   opacity: 0;
   transform: scale(0.7);
 }
@@ -759,11 +754,6 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  opacity: 0;
-  transform: scale(0.5);
-  transform-style: preserve-3d;
-  animation: show-cta 4s 5.5s;
-  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -858,7 +848,7 @@ hamburger
 }
 #home .hero .slogan {
   position: absolute;
-  bottom: 20vh;
+  bottom: 15vh;
   left: 0;
   padding: 0 5vw;
   width: 100%;
@@ -886,7 +876,7 @@ hamburger
 #menu .menu-section {
   height: 100vh;
   padding: 10vh 0;
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
+  background-color: #29323c;
   position: relative;
 }
 #menu .menu-section .menu-title {
