--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -70,7 +70,7 @@
             border-radius: 5px;
             position: absolute;
             // border: 1px solid #fff;
-            top: 25vh;
+            top: 20vh;
             left: 5vw;
 
             @media (min-width: 600px) {
@@ -168,7 +168,7 @@
             text-align: left;
             font-family: 'Gruppo',cursive;
             padding: .5em;
-            margin: 0;
+            margin: 5vh 0;
             width: 100%;
             width: auto;
             border-radius: 1rem;
