--- a/css/style.css
+++ b/css/style.css
@@ -690,6 +690,7 @@ hamburger
   }
 }
 #home .hero #hero-h1 h2 {
+  font-size: 1.5rem;
   margin-bottom: 0.5rem;
   display: block;
   width: fit-content;
@@ -706,6 +707,13 @@ hamburger
   color: #f4f4f4;
   text-align: left;
   font-size: 1.5em;
+  opacity: 0;
+  line-height: 1.3;
+  animation: hero-span 5s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: calc(1s + .5s * var(--s));
+  transition: 1s;
+  transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
 }
 @keyframes hero-span {
@@ -744,16 +752,19 @@ hamburger
   background: #dc143c;
   position: relative;
   display: block;
-  text-align: center;
   text-align: left;
   font-family: "Gruppo", cursive;
   padding: 0.5em;
   margin: 5vh 0;
   width: 100%;
-  width: auto;
   border-radius: 1rem;
   border: none;
   outline: none;
+  opacity: 0;
+  transform: scale(0.5);
+  transform-style: preserve-3d;
+  animation: show-cta 4s 5.5s;
+  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
