--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -83,6 +83,7 @@
             }
 
             h2 {
+                font-size: 1.5rem;
                 margin-bottom: .5rem;
                 display: block;
                 width: fit-content;
@@ -101,13 +102,13 @@
                     color: $text-light;
                     text-align: left;
                     font-size: 1.5em;
-                    // opacity: 0;
-                    // line-height: 1.3;
-                    // animation: hero-span 5s ease-in-out;
-                    // animation-fill-mode: forwards;
-                    // animation-delay: calc(1s + .5s * var(--s));
-                    // transition: 1s;
-                    // transform-style: preserve-3d;
+                    opacity: 0;
+                    line-height: 1.3;
+                    animation: hero-span 5s ease-in-out;
+                    animation-fill-mode: forwards;
+                    animation-delay: calc(1s + .5s * var(--s));
+                    transition: 1s;
+                    transform-style: preserve-3d;
 
                     /* HERO H1 INTRO ANIMATION */
                     @keyframes hero-span {
@@ -164,22 +165,19 @@
             background: $span-crimson;
             position: relative;
             display: block;
-            text-align: center;
             text-align: left;
             font-family: 'Gruppo',cursive;
             padding: .5em;
             margin: 5vh 0;
             width: 100%;
-            width: auto;
             border-radius: 1rem;
             border: none;
             outline: none;
-            // opacity: 0;
-            // transform: scale(.5);
-            // transform-style: preserve-3d;
-            // animation: show-cta 4s 5.5s;
-            // animation-fill-mode: forwards;
-            // background-color: $button-background-grey;
+            opacity: 0;
+            transform: scale(.5);
+            transform-style: preserve-3d;
+            animation: show-cta 4s 5.5s;
+            animation-fill-mode: forwards;
             transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
