--- a/css/style.css
+++ b/css/style.css
@@ -756,7 +756,7 @@ hamburger
   font-family: "Gruppo", cursive;
   padding: 0.5em;
   margin: 5vh 0;
-  width: 100%;
+  width: auto;
   border-radius: 1rem;
   border: none;
   outline: none;
