--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -169,7 +169,7 @@
             font-family: 'Gruppo',cursive;
             padding: .5em;
             margin: 5vh 0;
-            width: 100%;
+            width: auto;
             border-radius: 1rem;
             border: none;
             outline: none;
