--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -334,6 +334,7 @@
         position: relative;
         text-align: center;
         text-align: left;
+        isolation: isolate;
         // MENU IMAGE
 
         // MENU TITLE H2 & H3
@@ -377,6 +378,7 @@
             // transform: translateX(-50%);
             left: 5vw;
             gap: 1rem;
+
             // DESKTOP MENU CTA
             @media (min-width: 820px){
                 flex-direction: row;
@@ -400,20 +402,48 @@
                 }
             }
         }
-        // MENU IMAGES
-        // &#menu-1 {
-        //     background: green;
-        // }
-        // &#menu-2 {
-        //     background: pink;
-        // }
-        // &#menu-3 {
-        //     background: yellow;
-        // }
+
+        .menu-img {
+            
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: 100%;
+            width: 20rem;
+            width: 100%;
+            overflow: hidden;
+            z-index: -1;
+            mix-blend-mode: overlay;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        
 
         // DESKTOP MENU SECTION STYLE
-        @media (min-width:  768px) {
+        @media (min-width: 768px) {
             text-align: center;
+
+            .menu-img {
+                display: none;
+            }
+            // GENERAL MENU BACKGROUND STYLE
+            background-repeat: no-repeat;
+            // MENU IMAGES
+            &#menu-1 {
+                background-image: url("../img/altumcode-U0tBTn8UR8I-unsplash.jpg");
+            }
+
+            &#menu-2 {
+                background: pink;
+            }
+
+            &#menu-3 {
+                background: yellow;
+            }
         }
     }
 }
