--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -325,7 +325,7 @@
     // border: 2px solid yellow;
     min-height: 100vh;
     padding: 0;
-
+    z-index: 5;
     .menu-section {
         // border: 2px solid red;
         height: 100vh;
