--- a/css/style.css
+++ b/css/style.css
@@ -917,6 +917,7 @@ hamburger
 }
 #menu .menu-section .menu-content {
   margin: 1rem 5vw 0;
+  display: none;
 }
 #menu .menu-section .menu-content p {
   color: #f4f4f4;
@@ -970,6 +971,15 @@ hamburger
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+#menu .menu-section .menu-img.devices {
+  mix-blend-mode: normal;
+}
+#menu .menu-section .menu-img.devices img {
+  object-fit: contain;
+}
+#menu .menu-section .menu-img.engage img {
+  object-fit: contain;
 }
 @media (min-width: 768px) {
   #menu .menu-section {
