--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -356,7 +356,7 @@
         // MENU CONTENT P
         .menu-content {
             margin: 1rem 5vw 0;
-
+            display: none;
             p {
                 // border: 1px solid yellow;
                 color: #f4f4f4;
@@ -404,7 +404,6 @@
         }
 
         .menu-img {
-            
             position: absolute;
             top: 50%;
             left: 50%;
@@ -419,6 +418,20 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+            // RESPONSIVE SECTION
+            &.devices {
+                mix-blend-mode: normal;
+                img {
+                    object-fit: contain;
+                }
+            }
+            // RESPONSIVE SECTION
+            &.engage {
+                // mix-blend-mode: normal;
+                img {
+                    object-fit: contain;
+                }
             }
         }
         
