--- a/css/style.css
+++ b/css/style.css
@@ -981,6 +981,9 @@ hamburger
 #menu .menu-section .menu-img.engage img {
   object-fit: contain;
 }
+#menu .menu-section .menu-img.html img {
+  object-fit: contain;
+}
 @media (min-width: 768px) {
   #menu .menu-section {
     text-align: left;
