--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -428,7 +428,7 @@
             }
             // RESPONSIVE SECTION
             &.engage {
-                // mix-blend-mode: normal;
+                mix-blend-mode: normal;
                 img {
                     object-fit: contain;
                 }
