--- a/css/style.css
+++ b/css/style.css
@@ -965,18 +965,22 @@ hamburger
   width: 100%;
   overflow: hidden;
   z-index: -1;
-  mix-blend-mode: overlay;
+  mix-blend-mode: normal;
 }
 #menu .menu-section .menu-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-fit: contain;
 }
 #menu .menu-section .menu-img.devices {
   mix-blend-mode: normal;
 }
 #menu .menu-section .menu-img.devices img {
   object-fit: contain;
+}
+#menu .menu-section .menu-img.html {
+  mix-blend-mode: overlay;
 }
 #menu .menu-section .menu-img.html img {
   object-fit: contain;
