--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -413,11 +413,12 @@
             width: 100%;
             overflow: hidden;
             z-index: -1;
-            mix-blend-mode: overlay;
+            mix-blend-mode: normal;
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                object-fit: contain;
             }
             // RESPONSIVE SECTION
             &.devices {
@@ -428,7 +429,7 @@
             }
             // HTML
             &.html {
-                // mix-blend-mode: normal;
+                mix-blend-mode: overlay;
                 img {
                     object-fit: contain;
                 }
