--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ hamburger
   width: 100%;
   height: 3px;
   background: transparent;
-  z-index: 2;
 }
 
 /* The progress bar (scroll indicator) */
@@ -132,6 +131,7 @@ hamburger
   height: 3px;
   background: #ead2a1;
   opacity: 0.7;
+  opacity: 0;
   width: 0%;
 }
 
@@ -142,9 +142,6 @@ hamburger
 }
 
 /*end of bootstrap scrollbar*/
-/* TEXT-REFLECT CSS */
-/* END OF TEXT-REFLECT CSS */
-/* section title span animation */
 .section-title span {
   position: relative;
   color: #29323c;
@@ -247,6 +244,7 @@ hamburger
 }
 .btn::before {
   box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.3));
 }
 .btn::after {
   box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
@@ -626,36 +624,6 @@ hamburger
   z-index: 1;
   overflow: hidden;
 }
-#home::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position: left;
-  background-size: cover;
-  z-index: -1;
-  mix-blend-mode: overlay;
-  opacity: 0.7;
-}
-@media (min-width: 1024px) {
-  #home::after {
-    width: 50%;
-    background-position: left;
-    background-size: contain;
-    background-attachment: fixed;
-    opacity: 1;
-    background-image: url(../img/shakexblue-min.jpg);
-  }
-}
-@media (max-width: 1024px) {
-  #home::after {
-    opacity: 1;
-  }
-}
 #home .hero {
   overflow: hidden;
   min-height: 100vh;
@@ -670,11 +638,6 @@ hamburger
   overflow: hidden;
   mix-blend-mode: overlay;
 }
-@media (min-width: 1024px) {
-  #home .hero .hero-bg {
-    width: 100%;
-  }
-}
 #home .hero .hero-bg img {
   width: 100%;
   height: 100%;
@@ -685,7 +648,9 @@ hamburger
   padding: 0;
   border-radius: 5px;
   position: absolute;
-  top: 20vh;
+  width: max-content;
+  text-transform: capitalize;
+  top: 15vh;
   left: 5vw;
 }
 @media (min-width: 600px) {
@@ -696,23 +661,18 @@ hamburger
   }
 }
 #home .hero #hero-h1 h2 {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  font-size: 2.5rem;
+  line-height: 1.4;
   display: block;
   width: fit-content;
   color: #eee;
   font-family: "Philosopher", sans-serif;
 }
-@media (min-width: 768px) {
-  #home .hero #hero-h1 h2 {
-    font-size: 2rem;
-  }
-}
 #home .hero #hero-h1 h2 span {
   display: inline-block;
   color: #f4f4f4;
   text-align: left;
-  font-size: 1.5em;
+  margin: 0.5rem 0;
   opacity: 0;
   line-height: 1.3;
   animation: hero-span 5s ease-in-out;
@@ -721,6 +681,11 @@ hamburger
   transition: 1s;
   transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
+}
+@media (min-width: 768px) {
+  #home .hero #hero-h1 h2 span {
+    font-size: 3rem;
+  }
 }
 @keyframes hero-span {
   10% {
@@ -739,7 +704,6 @@ hamburger
   animation: aka 5s ease alternate;
   animation-delay: 4s;
   animation-fill-mode: forwards;
-  margin: 0.5em 0;
   color: #ddd;
   opacity: 0;
   transform: scale(0.7);
@@ -754,7 +718,6 @@ hamburger
   }
 }
 #home .hero #cta-header {
-  font-size: 1.5rem;
   background: #dc143c;
   position: relative;
   display: block;
@@ -766,11 +729,6 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  opacity: 0;
-  transform: scale(0.5);
-  transform-style: preserve-3d;
-  animation: show-cta 4s 5.5s;
-  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -779,7 +737,7 @@ hamburger
 @media (min-width: 768px) {
   #home .hero #cta-header {
     font-size: 1.5em;
-    width: 100%;
+    width: 20rem;
     text-align: center;
   }
 }
@@ -821,8 +779,7 @@ hamburger
   display: inline-block;
   text-transform: uppercase;
   color: #f4f4f4;
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 2.5rem;
   animation: animate 3s ease-in-out infinite;
   animation-delay: calc(1s + .2s * var(--i));
   /* cta keyframes*/
@@ -887,6 +844,7 @@ hamburger
   }
   #home .hero .slogan p {
     text-align: center;
+    text-align: left;
   }
 }
 
@@ -939,8 +897,6 @@ hamburger
   #menu .menu-section .menu-cta {
     flex-direction: row;
     width: 30rem;
-    left: 50%;
-    transform: translateX(-50%);
   }
   #menu .menu-section .menu-cta .btn {
     padding: 1rem 0;
@@ -961,28 +917,22 @@ hamburger
   left: 50%;
   transform: translate(-50%, -50%);
   height: 100%;
-  width: 20rem;
-  width: 100%;
+  height: 17rem;
+  width: 17rem;
   overflow: hidden;
   z-index: -1;
+  mix-blend-mode: overlay;
   mix-blend-mode: normal;
 }
 #menu .menu-section .menu-img img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-fit: contain;
+  object-position: center;
 }
 #menu .menu-section .menu-img.devices {
   mix-blend-mode: normal;
 }
 #menu .menu-section .menu-img.devices img {
-  object-fit: contain;
-}
-#menu .menu-section .menu-img.html {
-  mix-blend-mode: overlay;
-}
-#menu .menu-section .menu-img.html img {
   object-fit: contain;
 }
 #menu .menu-section .menu-img.engage {
@@ -991,7 +941,10 @@ hamburger
 #menu .menu-section .menu-img.engage img {
   object-fit: contain;
 }
-@media (min-width: 768px) {
+#menu .menu-section .menu-img.html img {
+  object-fit: contain;
+}
+@media (min-width: 1024px) {
   #menu .menu-section {
     text-align: left;
     background: #29323c;
@@ -1080,7 +1033,7 @@ hamburger
 }
 #skills .skills-top .skills-info p {
   color: #f4f4f4;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   line-height: 1.6;
   font-weight: 500;
   background: transparent;
