--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -146,8 +146,8 @@
                 .contact-info {
                     width: 90%;
                     p {
-                        font-size: 1rem;
-                        font-weight: 600;
+                        font-size: .9rem;
+                        font-weight: 500;
                         padding: .5rem;
                         border: none;
                         outline: none;
